taking out display fixed, which stopped scrollbar from working

--- a/Styles.css
+++ b/Styles.css
@@ -13,10 +13,6 @@ html {
     font-size: 125%;
 }
 
-body {
-    position: fixed;
-}
-
 img {
     width: 100%;
     height: auto;
